<resources>
    <string name="app_name">SimpleCalc2</string>
    <string name="EnterNumber">Введите число</string>
    <string name="eq">=</string>
    <string name="div">/</string>
    <string name="min">-</string>
    <string name="mult">*</string>
    <string name="plus">+</string>
    <string name="_0">0</string>
    <string name="_9">9</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="clr">CLR</string>
    <string name="del">Del</string>
    <string name="dot">.</string>
    <string name="_8">8</string>
    <string name="del3">DEL</string>
    <string name="ng">NG</string>
</resources>